more meat on the bones

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <h1>Docker & PHP 101</h1>
                             <p>An intro to Docker technologies using PHP</p>
                             <p><small>Mat Gilbert - 2019</small></p>
-                            <img style="background: none; border: none !important;" src="img/Moby-logo.png" alt="Docker Whale"/>
+                            <img style="background: none; border: none !important; width: 30%;" src="img/docker.svg" alt="Docker Whale"/>
                         </section>
                 <section>
                     <h2>Todays Objective:</h2>
@@ -42,6 +42,11 @@
                     <p>Your computer vs a computer in your computer</p>
                     <p>The cloud is just somebody else's computer</p>
                     <p>There are important differences between local & production</p>
+                </section>
+
+                <section>
+                    <h2>VM vs Container</h2>
+                    <img src="img/vm-container.png"/>
                 </section>
 
                 <section>
@@ -76,10 +81,14 @@
                 </section>
 
                 <section>
-                        <h2>Docker CLI:</h2>
-
-                            <p>docker ps and docker ps -a</p>
+                        <h2>Docker CLI frequently used:</h2>
+                            <p>docker ps</p>
+                            <p>docker ps -a</p>
+                            <p>docker build .</p>
                             <p>docker exec -it container /bin/bash</p>
+                            <p>docker compose up</p>
+                            <p>docker-compose down</p>
+                            <p>docker-compose build</p>
                     </section>
 
                 <section>
@@ -166,9 +175,15 @@ volumes:
                     </pre>
                 </section>
 
+                <section>
+                    <h2>Minimal Docker / PHP Starter</h2>
+                    <p>https://github.com/dirtybirdnj/docker-php-minimal</p>
+                </section>
+
 
                 <section>
                     <h2>How to apply docker<br/><br/> to an existing app?</h2>
+                    <p><small>aka what does "dockerizing" mean?</small></p>
                     <ul>
                         <li>Adding docker artifacts</li>
                         <li>.env file configuration</li>
@@ -184,13 +199,39 @@ volumes:
                         <li>Application Development</li>
                         <li>Focus on Information Architecture</li>
                     </ul>
+                    <p><a href="https://www.bluehousegroup.com">https://www.bluehousegroup.com</a></p>
                     <p>&nbsp;</p>
                     <h3>Now Hiring!</h3>
-
                         <p><a href="https://www.bluehousegroup.com/about-us/careers/software-engineer/">Software Engineer</a></p>
+                        <p>Marketing Intern</p>
                         <p>careers@bluehousegroup.com</p>
-
                 </section>
+
+                <section>
+                    <h2>Robot Draws You!</h2>
+                    <img width="400px;" src="img/rdy.png"/>
+                    <ul>
+                        <li>Go to <a href="https://techjamvt.com">https://techjamvt.com</a></li>
+                        <li>Scroll to the bottom, click "Contact Us"</li>
+                        <li>Tell them you want to see Robot Draws You! at Tech Jam 2019!</li>
+                    </ul>
+                    <p><a href="http://www.robotdrawsyou.com">http://www.robotdrawsyou.com</a></p>
+                    <p>mat@robotdrawsyou.com</p>
+                </section>
+
+                <section>
+                    <h2>Thank You</h2>
+                    <p>Mat Gilbert</p>
+                    <p>Personal: matgilbert@gmail.com</p>
+                    <p>Github: dirtybirdnj</p>
+                    <p>Bluehouse Group Is Hiring!</p>
+                    <p> careers@bluehousegroup.com</p>
+                </section>
+
+
+
+                https://github.com/dirtybirdnj/docker-php-minimal
+
             </div>
         </div>
 
