more updates wooo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <h1>Docker & PHP 101</h1>
                             <p>An intro to Docker technologies using PHP</p>
                             <p><small>Mat Gilbert - 2019</small></p>
+                            <p><a href="https://dirtybirdnj.github.io/docker-php-101">https://dirtybirdnj.github.io/docker-php-101</a></p>
                             <img style="background: none; border: none !important; width: 30%;" src="img/docker.svg" alt="Docker Whale"/>
                         </section>
                 <section>
@@ -86,9 +87,9 @@
                             <p>docker ps -a</p>
                             <p>docker build .</p>
                             <p>docker exec -it container /bin/bash</p>
+                            <p>docker-compose build</p>
                             <p>docker compose up</p>
                             <p>docker-compose down</p>
-                            <p>docker-compose build</p>
                     </section>
 
                 <section>
@@ -177,16 +178,16 @@ volumes:
 
                 <section>
                     <h2>Minimal Docker / PHP Starter</h2>
-                    <p>https://github.com/dirtybirdnj/docker-php-minimal</p>
+                    <p><a href="https://github.com/dirtybirdnj/docker-php-minimal">https://github.com/dirtybirdnj/docker-php-minimal</a></p>
                 </section>
 
-
                 <section>
-                    <h2>How to apply docker<br/><br/> to an existing app?</h2>
+                    <h2>How to apply docker<br/>to an existing app?</h2>
                     <p><small>aka what does "dockerizing" mean?</small></p>
                     <ul>
                         <li>Adding docker artifacts</li>
                         <li>.env file configuration</li>
+                        <li>Running build over and over... adding stuff till it works!</li>
                         <li>Docker local only is ok!</li>
                     </ul>
 
@@ -200,7 +201,7 @@ volumes:
                         <li>Focus on Information Architecture</li>
                     </ul>
                     <p><a href="https://www.bluehousegroup.com">https://www.bluehousegroup.com</a></p>
-                    <p>&nbsp;</p>
+
                     <h3>Now Hiring!</h3>
                         <p><a href="https://www.bluehousegroup.com/about-us/careers/software-engineer/">Software Engineer</a></p>
                         <p>Marketing Intern</p>
@@ -226,6 +227,8 @@ volumes:
                     <p>Github: dirtybirdnj</p>
                     <p>Bluehouse Group Is Hiring!</p>
                     <p> careers@bluehousegroup.com</p>
+                    <p>More Info</p>
+                    <p><a href="https://gist.github.com/dirtybirdnj/53de008883b8dc771d9ee6a648e42183">https://gist.github.com/dirtybirdnj/53de008883b8dc771d9ee6a648e42183</a></p>
                 </section>
 
             </div>
